Added Category Router. Cart Route modified to get only user cart details
