# routes/order.js
@@ -2,12 +2,10 @@ const orderRouter = require('express').Router();
 const db = require('../queries/orderQueries')
 const userPermissions = require('../permissions/userPermissions')
 
-// Apply to all Routes: Only authenticated users.
-
 // Get All User Orders
-orderRouter.get('/', userPermissions.isLoggedIn, db.getUserOrders);
+orderRouter.get('/mine', userPermissions.isLoggedIn, db.getUserOrders);
 
 // Retrieve an order
-orderRouter.get('/:id', userPermissions.isLoggedIn, db.getUserOrderByOrderId);
+orderRouter.get('/mine/:id', userPermissions.isLoggedIn, db.getUserOrderByOrderId);
 
 module.exports = orderRouter;
